kubernetes/adguardhome/adguardhome/adguardhome.yaml
# StatefulSet used so that hostnames are stable and persistent, which is necessary for adguardhome-sync & traefik
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguardhome
  namespace: adguardhome
  labels:
    app.kubernetes.io/name: adguardhome
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
    keel.sh/match-tag: "true"
spec:
  serviceName: adguardhome
  replicas: 3
  selector:
    matchLabels:
      app: adguardhome
      app.kubernetes.io/name: adguardhome
  template:
    metadata:
      labels:
        app: adguardhome
        app.kubernetes.io/name: adguardhome
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: adguardhome
        image: adguard/adguardhome:latest
        imagePullPolicy: Always
        stdin: false
        tty: false
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"]
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 53 #dns
          name: dns
          protocol: UDP
        - containerPort: 80 #web gui
          name: http
          protocol: TCP
        - containerPort: 443 #DNS-over-HTTPS
          name: https
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "150m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /opt/adguardhome/work
            name: adguardhome-work-cache
          - mountPath: /opt/adguardhome/conf
            name: adguardhome-config-cache
          - mountPath: /opt/adguardhome/certs
            name: adguardhome-certs
      volumes:
        - name: adguardhome-config
          configMap:
            name: adguardhome-config
        - name: adguardhome-config-cache
          emptyDir:
            sizeLimit: 500Mi
        - name: adguardhome-work-cache
          emptyDir:
            sizeLimit: 500Mi
        - name: adguardhome-certs
          secret:
            secretName: wildcard-timo-be-production-tls
