kubernetes/adguardhome/adguardhome/adguardhome-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguardhome-traefik
  namespace: adguardhome
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguardhome.kubernetes.timo.be`) || Host(`adguardhome.timo.be`)
      kind: Rule
      services:
        - name: adguardhome-traefik
          port: 80
          sticky:
            cookie:
              secure: true
              httpOnly: true
              sameSite: none
